# qchess

./: .gitignore  .gitmodules  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
backend/: CMakeLists.txt
engine/: .gitignore  Engine.cpp  Engine.h  build.sh
frontend/: .env  package-lock.json  package.json
frontend/src/: middleware.js
frontend/src/components/chess/: Chessboard.jsx  Piece.jsx
frontend/src/pages/: _app.jsx
frontend/src/pages/analysis/: [id].jsx
frontend/src/pages/play/: index.jsx
reverse-proxy/: Dockerfile.prod  default.conf  default.prod.conf
src/components/: Layout.jsx  Navbar.jsx
src/pages/: _app.jsx  _document.jsx
src/pages/analysis/: index.jsx
src/pages/play/: [id].jsx  index.jsx
web/: .env  Dockerfile  Dockerfile.prod  docker-entrypoint.sh  next.config.mjs  package-lock.json  package.json
web/prisma/: schema.prisma
web/prisma/migrations/20240612130903_playedat/: migration.sql
web/public/stockfish/: stockfish.js  stockfish.wasm  stockfish.worker.js
web/src/: middleware.js
web/src/components/: BottomNav.jsx  Evalbar.jsx  Layout.jsx  Movelist.jsx  Navbar.jsx
web/src/components/chess/: AnalysisChessboard.jsx  Chessboard.jsx  Clock.jsx  Piece.jsx  PlayChessboard.jsx
web/src/lib/: engine.js  stockfish.js
web/src/pages/: _app.jsx  _document.jsx  index.jsx  test.jsx
web/src/pages/analysis/: [id].jsx  index.jsx
web/src/pages/analysis/[gameId]/: index.jsx
web/src/pages/api/: games.js
web/src/pages/api/auth/: [...nextauth].js
web/src/pages/api/ws/: create.js  game.js  public.js  (+1 more)
web/src/pages/explore/: [id].jsx  index.jsx
web/src/pages/play/: ai.jsx  index.jsx
web/src/pages/view/: [id].jsx  index.jsx
web/src/styles/: globals.css
ws/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  run.sh
ws/sql/: drop  init  init.sql
ws/src/: Connection.h  Connection.hpp  Database.cpp  Database.h  Database.hpp  Game.cpp  Game.h  Utils.cpp  Utils.h  main.cpp
(+2 files in other folders)
